* Changed file structure (view README.txt for details)
* '--help' and '-h' are now the same section in code -> reduced the code of the script
* Removed link to forum, because I received all bug reports and suggestions via eMail (forum was deleted)
* Changed mail@ts3-tools.info to info@ts3-tools.info everywhere
* Adjusted '--help' output, because some output was overwritten

==================================
||      Version 3.4             ||
==================================

* Fixed non-working update feature for the script self
! Tried to fetch the version via the ServerQuery command 'version' but this will take 4 seconds more than analyzing the log file of the instance
! Do you have any further suggestions or bugs? Write me an eMail to mail@ts3-tools.info or open a new topic in the forum: http://www.forum.ts3-tools.info/

==================================
||      Version 3.3             ||
==================================

* Fixed issue with variable "TERM" from Cronjob
+ Added status "In Progress" to the actual todo of the script: [ .. ] -> [ OK ] or [ FAILED ]
* Changed example E-Mail address from file 'administrator_eMail.txt'
! Please set your OWN E-Mail address! I don't want to receive your E-Mails. ;)
! HINT: If you change the E-Mail(s) from file 'administrator_eMail.txt', you have to reinstall your cronjob!
! Set more emails like following: you@domain.com,yourPartner@example.com,me@ts3.de
* Changed script selfcheck: At first check, if the script is running as root and then check the parameters
* Changed example text of "auto_update_text.txt" file
* Adjusted update feature of the script self: it will now also not update the files 'administrator_eMail.txt' and 'ignore_clients.txt'
* Adjusted output of script (especially for cronjob)
+ Added length check for displayed username (just 30 chars are allowed)
* Moved length checks higher
- Removed "tempfile" for Debian based systems (each system will use 'mktemp' now)